--- a/index.html
+++ b/index.html
@@ -1,30 +1,107 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Validation RegEx Form</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
+    <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <!-- font awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+  <!--Import Google Icon Font-->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/css/materialize.min.css">
+  <title>Validation RegEx Form</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
     <body>
-        <h1>New User Signup</h1>
-        <form>
-
-            <input type="text" name="username" placeholder="username">
-            <p>Username must be  and contain 5 - 12 characters</p>
-
-            <input type="text" name="email" placeholder="email">
-            <p>Email must be a valid address, e.g. me@mydomain.com</p>
-
-            <input type="password" name="password" placeholder="password">
-            <p>Password must alphanumeric (@, _ and - are also allowed) and be 8 - 20 characters</p>
-
-            <input type="text" name="telephone" placeholder="telephone">
-            <p>Telephone must be a valid number, as example:[+xx xxx xxx xx xx] (12 digits)</p>
-
-            <input type="text" name="slug" placeholder="profile slug">
-            <p>Slug must contain only lowercase letters, numbers and hyphens and be 8 - 20 characters</p>
-
-        </form>
+        <div class="container">
+                <h1>New User Signup</h1>
+                  <div class="row">
+                    <form class="col s6 offset-s6">
+                      <div class="row">
+                        <div class="input-field">
+                          <i class="far fa-user prefix fa-3x"></i>
+                          <input id="username" type="text" class="validate">
+                          <label for="username">Username</label>
+                          <span class="helper-text" data-error="Username must be  and contain 5 - 12 characters" data-success="Thank you">Please enter your username</span>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="row">
+                    <form class="col s6 offset-s6">
+                      <div class="row">
+                        <div class="input-field">
+                          <i class="far fa-envelope prefix fa-3x"></i>
+                          <input id="email" type="email" class="validate">
+                          <label for="email">Email</label>
+                          <span class="helper-text" data-error="Email must be a valid address, e.g. me@mydomain.com" data-success="Thank you">Please enter your email</span>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="row">
+                    <form class="col s6 offset-s6">
+                      <div class="row">
+                        <div class="input-field">
+                          <i class="fas fa-unlock-alt prefix fa-3x"></i>
+                          <input id="password" type="password" class="validate">
+                          <label for="password">Password</label>
+                          <span class="helper-text" data-error="Password must alphanumeric (@, _ and - are also allowed) and be 8 - 20 characters" data-success="Thank you">Please enter your password</span>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="row">
+                    <form class="col s6 offset-s6">
+                      <div class="row">
+                        <div class="input-field">
+                          <i class="fas fa-phone prefix fa-3x"></i>
+                          <input id="telephone" type="text" class="validate">
+                          <label for="telephone">Telephone</label>
+                          <span class="helper-text" data-error="Telephone must be a valid number, as example:[+xx xxx xxx xx xx] (12 digits)" data-success="Thank you">Please enter your telephone</span>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="row">
+                    <form class="col s6 offset-s6">
+                      <div class="row">
+                        <div class="input-field">
+                          <i class="fas fa-share-alt prefix fa-3x"></i>
+                          <input id="slug" type="text" class="validate">
+                          <label for="slug">Slug</label>
+                          <span class="helper-text" data-error="Slug must contain only lowercase letters, numbers and hyphens and be 8 - 20 characters" data-success="Thank you">Please enter your slug name</span>
+                        </div>
+                      </div>
+                    </form>
+                  </div>
+                  <div class="row">
+                    <form action="#" class="col s6 offset-s6 center">
+                        <p>
+                          <label>
+                            <input type="checkbox" />
+                            <span>I agree to the processing of personal data</span>
+                          </label>
+                        </p>
+                    </form>
+                  </div>
+              <div class="row">
+                <form class="col s6 offset-s6 center">
+                    <button class="btn waves-effect waves-light center" type="submit" name="action">Register
+                            <i class="material-icons right">send</i>
+                        </button>
+                </form>
+              </div> 
+        </div>
+        
+         <!-- Compiled and minified JavaScript -->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
+  <script>
+    $(document).ready(function(){
+    });
+  </script>
         <script type="text/javascript" src="validation.js"></script>
     </body>
 </html>
