add JS logic to enabling submit button

--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
               <div class="row">
                 <p>
                   <label>
-                    <input type="checkbox"/>
+                    <input id="checkbox" type="checkbox"/>
                     <span>I agree to the processing of personal data</span>
                   </label>
                 </p>
                 </div>
 
               <div class="row">
-                  <button class="btn-large waves-effect waves-light center" type="submit" name="action">Register
+                  <button id="regbutton" class="btn-large waves-effect waves-light center" type="submit" name="action">Register
                           <i class="material-icons right">send</i>
                       </button>
                 </div> 
